--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,35 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.1.1
+alembic==1.15.2
+altgraph @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/altgraph-0.17.2-py2.py3-none-any.whl
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+Flask==3.0.2
 Flask-Login==0.6.3
-Flask-Migrate==4.0.5
-Werkzeug==2.3.7
-numpy==1.26.2
-pandas==2.1.3
-scikit-learn==1.3.2
-SQLAlchemy==2.0.23
-Jinja2==3.1.2
-click==8.1.7
-itsdangerous==2.1.2
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+future @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/future-0.18.2-py3-none-any.whl
+idna==3.10
+importlib_metadata==8.6.1
+itsdangerous==2.2.0
+Jinja2==3.1.5
+joblib==1.4.2
+macholib @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/macholib-1.15.2-py2.py3-none-any.whl
+Mako==1.3.10
+MarkupSafe==3.0.2
+numpy==2.0.2
+opensearch-py==2.4.2
+pillow==11.1.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
-alembic==1.12.1
-joblib==1.3.2
-scipy==1.11.4
-threadpoolctl==3.2.0 
+PyYAML==6.0.1
+requests==2.32.3
+scikit-learn==1.6.1
+scipy==1.13.1
+six @ file:///AppleInternal/Library/BuildRoots/2c89a47b-9dd5-11ef-938f-6e654a286000/Library/Caches/com.apple.xbs/Sources/python3/six-1.15.0-py2.py3-none-any.whl
+SQLAlchemy==2.0.40
+threadpoolctl==3.6.0
+typing_extensions==4.13.2
+urllib3==2.3.0
+Werkzeug==3.1.3
+zipp==3.21.0
