--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,19 @@
-Flask
-Flask-Login
-Flask-Migrate
-Flask-SQLAlchemy
-Jinja2
-Mako
-MarkupSafe
-SQLAlchemy
-Werkzeug
-alembic
-blinker
-click
-itsdangerous
-python-dotenv
-requests
-Pillow
-numpy
-scikit-learn
-scipy
+Flask==3.0.2
+Flask-Login==0.6.3
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Jinja2==3.1.5
+Mako==1.3.10
+MarkupSafe==3.0.2
+SQLAlchemy==2.0.40
+Werkzeug==3.1.3
+alembic==1.15.2
+blinker==1.9.0
+click==8.1.8
+itsdangerous==2.2.0
+python-dotenv==1.0.0
+requests==2.32.3
+Pillow==11.1.0
+numpy==2.0.2
+scikit-learn==1.6.1
+scipy==1.13.1
